--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -67,4 +67,13 @@
     border-radius: 12px;
     box-shadow:0px 1px 8px rgba(0, 0, 0, 0.25);
   }
+  .button{
+    background-color: red;
+    color:white;
+    border:0px solid;
+    border-radius: 3px;
+    height:25px;
+    margin:5px;
+    padding:3px;
+  }
       
